# hs-onedrive

./: hs-onedrive.cabal  project.nix  shell.nix
src/Onedrive/: Auth.hs  FolderChangesReader.hs  Items.hs  Session.hs  User.hs
src/Onedrive/Internal/: Request.hs  Response.hs
src/Onedrive/Types/: AudioFacet.hs  DeletedFacet.hs  FileFacet.hs  FileSystemInfoFacet.hs  FolderChangesBatch.hs  FolderFacet.hs  HashesType.hs  Identity.hs  IdentitySet.hs  ImageFacet.hs  ItemReference.hs  LocationFacet.hs  OauthTokenRequest.hs  OauthTokenResponse.hs  OnedriveItem.hs  PackageFacet.hs  PhotoFacet.hs  RemoteItemFacet.hs  SearchResultFacet.hs  SharedFacet.hs  SharepointIdsFacet.hs  SpecialFolderFacet.hs  Thumbnail.hs  ThumbnailSet.hs  UserInfo.hs  VideoFacet.hs
