name:                hs-onedrive
version:             0.1.0.0
synopsis:            Haskell bindings to the Onedrive API
description:         Please see README.md
homepage:            https://github.com/asvyazin/hs-onedrive#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Svyazin
maintainer:          guybrush@live.ru
copyright:           2016
category:            API
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Onedrive.FolderChangesReader,
                       Onedrive.Auth,
                       Onedrive.Items,
                       Onedrive.User,
                       Onedrive.Session,
                       Onedrive.Types.AudioFacet,
                       Onedrive.Types.DeletedFacet,
                       Onedrive.Types.FileFacet,
                       Onedrive.Types.FileSystemInfoFacet,
                       Onedrive.Types.FolderChangesBatch,
                       Onedrive.Types.FolderFacet,
                       Onedrive.Types.HashesType,
                       Onedrive.Types.Identity,
                       Onedrive.Types.IdentitySet,
                       Onedrive.Types.ImageFacet,
                       Onedrive.Types.ItemReference,
                       Onedrive.Types.LocationFacet,
                       Onedrive.Types.OnedriveItem,
                       Onedrive.Types.OauthTokenRequest,
                       Onedrive.Types.OauthTokenResponse,
                       Onedrive.Types.PackageFacet,
                       Onedrive.Types.PhotoFacet,
                       Onedrive.Types.RemoteItemFacet,
                       Onedrive.Types.SearchResultFacet,
                       Onedrive.Types.SharedFacet,
                       Onedrive.Types.SharepointIdsFacet,
                       Onedrive.Types.SpecialFolderFacet,
                       Onedrive.Types.Thumbnail,
                       Onedrive.Types.ThumbnailSet,
                       Onedrive.Types.UserInfo,
                       Onedrive.Types.VideoFacet
  other-modules:       Onedrive.Internal.Response,
                       Onedrive.Internal.Request
  build-depends:       aeson,
                       base,
                       bytestring,
                       conduit,
                       conduit-combinators,
                       http-client,
                       http-conduit,
                       http-types,
                       exceptions,
                       lens,
                       mtl,
                       stm,
                       text,
                       transformers
  default-language:    Haskell2010

test-suite hs-onedrive-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-onedrive
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/asvyazin/hs-onedrive
